Addition of script

--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 <body>
     <h1>Title</h1>
     <h2>Another Title</h2>
+    <script>
+        console.log('GIT is cool!');
+    </script>
 </body>
 </html>
